portfolio-box layout issue fixed

--- a/style.css
+++ b/style.css
@@ -276,8 +276,6 @@ span {
 .portfolio-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    justify-items: center;
     margin: 0 5rem;
     gap: 2.5rem;
 }
